--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Luca Krueger",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemon": "^2.0.21",
     "request": "^2.88.2"
